Fixed Footer paragraph alignment

--- a/styles.css
+++ b/styles.css
@@ -109,13 +109,15 @@ footer{
     grid-column: 1/3;
     min-height: 70px;
     display: flex;
-    justify-content: center;
     align-items: center;
     background-color: #2c5282;
     color: #fff
     
 }
 
+footer p{
+    padding-left: 20%;
+}
 
 
 main{
